Fixed mobile horizontal scroll bug, thanks to mary aka galactic plastic

--- a/sass/grayscale.scss
+++ b/sass/grayscale.scss
@@ -15,6 +15,9 @@ html {
     height: 100%;
 }
 
+.row {
+  margin: 0;
+}
 
 @media(min-width:300px) and (max-width:600px) {
   .navbar-header {
